# AI-Form-Processing

./: .gitignore  README.md  generate_index.js  index.html  pyproject.toml  script.js  style.css
.github/: copilot-instructions.md
.github/workflows/: import-data.yml  pages.yml
data/: WG-20260526-I1FQEY.html  WG-20260602-1D1TCX.html  WG-20260602-DRASAK.html  WG-20260602-WCKRNJ.html  Wohngeld-Vorprüfungsbericht WG-20260526-I1FQEY copy 2.html  index.json
mocks/: mock_invalid.json  mock_rejected.json  mock_rejected_bafoeg.json  mock_rejected_income.json  mock_valid.json
src/wohngeld/: applicant_data.py  cli.py  graph.py  state.py
src/wohngeld/llm/: generic_agent.py  prompts.py
src/wohngeld/phases/archive/: archive.py
src/wohngeld/phases/decision/: decision.py
src/wohngeld/phases/formal_review/: formal_review.py
src/wohngeld/phases/formal_review/llm/: agent.py  output.py  prompt.py
src/wohngeld/phases/input/: input.py
src/wohngeld/phases/input/llm/: agent.py  output.py  prompt.py
src/wohngeld/phases/material_review/: material_review.py
src/wohngeld/phases/material_review/llm/: agent.py  output.py  prompt.py
src/wohngeld/phases/notification/: notification.py
