[project]
name = "ai-form-processing"
version = "0.1.0"
description = "Automate the processing of public institution forms"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-mistralai>=1.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
